# actix-todolist

./: .env  Cargo.toml  Dockerfile  Dockerfile1  Dockerfile2  docker-compose.yaml  readme.md  routes.rest
migrations/2020-06-08-124857_tasks/: up.sql
migrations/2020-06-17-134253_create_users/: up.sql
src/: app_state.rs  db_connection.rs  handlers.rs  main.rs  middlewares.rs  models.rs  schema.rs  task_repository.rs  user_handlers.rs  user_service.rs
src/graphql/: mod.rs  schema.rs
src/handlers/: mod.rs  task_handlers.rs  user_handlers.rs
src/models/: task.rs  user.rs
src/services/: mod.rs  task_repository.rs  user_service.rs
