[package]
name = "actix-todolist"
version = "0.1.0"
authors = ["Daniel Cardona <daniel.cardonarojas@endava.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"
actix-web = "2.0"
actix-rt = "1.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
actix-service = "1.0.5"
futures = "0.3.5"
chrono = "0.4.11"