[package]
name = "actix-todolist"
version = "0.1.0"
authors = ["Daniel Cardona <daniel.cardonarojas@endava.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
listenfd = "0.3.3"
serde_urlencoded = "0.6.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
actix-web = { version="2.0", features=["rust-tls"] }
bcrypt = "0.8.0"
actix-rt = "1.0"
jsonwebtoken = "7.1.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
actix-service = "1.0.5"
futures = "0.3.5"
dotenv = "0.15.0"
serde_json = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"